--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,12 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "5432:5432"
-    volumes:
-      - ./temp/docker_volumes/app_db:/var/lib/postgresql/data
 
   db_mongo:
     image: mongo
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: mongodb
+      MONGO_INITDB_ROOT_PASSWORD: mongodb
     ports:
       - "27017:27017"
