--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.0'
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
 
 	// Security
 	//implementation 'org.springframework.security:spring-security-core:6.3.0'
-	//implementation 'com.auth0:java-jwt:4.4.0'
+	implementation 'com.auth0:java-jwt:4.4.0'
 
 	// Postgres
 	runtimeOnly 'org.postgresql:postgresql'
