--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,11 +12,11 @@ spring:
     banner-mode: off
   data:
     mongodb:
-      uri: mongodb://mongodb:mongodb@localhost:27017/mongodb
+      uri: ${SPRING_DATASOURCE_MONGO_URI:mongodb://mongodb@localhost:27017/mongodb}
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: postgres
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/postgres}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
